# Picohack-2022

./: 2.jpg:Zone.Identifier  2.jpgZone.Identifier  NewRoad.gpx.url  README.md  easy_path.gpx  edge_detection.py  get_satelite_images.js  get_satelite_images.py  main.py  pyproject.toml  road_detect.py  road_width_detect.py  sticher.sqlite  temp_sanity.sqlite
bendy/: bendy.py  test.json
data/: 5032225.gpx  5032266.gpx  HatchetLane.gpx  HatchetLane2.gpx  NoName.gpx  NorthLane.gpx  PalaceLane.gpx  YewTreeHeathRoad.gpx
vision/: lane.py  road_detect.py  road_width_detect.py
